Fix tests and docker compose
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -11,6 +11,7 @@ AM_CERTS_DB_SSL_MODE=disable
 AM_CERTS_DB_SSL_CERT=
 AM_CERTS_DB_SSL_KEY=
 AM_CERTS_DB_SSL_ROOT_CERT=
+AM_CERTS_DB_MAX_CONNECTIONS=100
 AM_CERTS_HTTP_HOST=certs
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
@@ -31,3 +32,4 @@ AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
 AM_CERTS_CA_KEY=./ssl/ca.key
 AM_CERTS_CA_CERT=./ssl/ca.crt
+AM_CERTS_RELEASE_TAG=latest
