--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ volumes:
 
 services:
   certs:
-    image: absmach/certs:latest
+    image: absmach/certs:${AM_CERTS_RELEASE_TAG}
     container_name: certs
     depends_on:
       - certs-db
@@ -31,11 +31,17 @@ services:
       - AM_CERTS_HTTP_PORT=${AM_CERTS_HTTP_PORT}
       - AM_CERTS_GRPC_HOST=${AM_CERTS_GRPC_HOST}
       - AM_CERTS_GRPC_PORT=${AM_CERTS_GRPC_PORT}
+      - AM_CERTS_CA_KEY=${AM_CERTS_CA_KEY}
+      - AM_CERTS_CA_CERT=${AM_CERTS_CA_CERT}
     ports:
       - "${AM_CERTS_HTTP_PORT}:${AM_CERTS_HTTP_PORT}"
       - "${AM_CERTS_GRPC_PORT}:${AM_CERTS_GRPC_PORT}"
     volumes:
-      - ./ssl:/ssl
+    - type: bind
+      source: ./ssl/
+      target: /ssl/
+      bind:
+        create_host_path: true
 
   certs-db:
     image: postgres:16.2-alpine
@@ -49,6 +55,6 @@ services:
       - POSTGRES_PASSWORD=${AM_CERTS_DB_PASS}
       - POSTGRES_DB=${AM_CERTS_DB}
     ports:
-      - "5432:5432"
+      - "5454:5432"
     volumes:
       - certs-db-volume:/var/lib/postgresql/data
