--- a/docker/.env
+++ b/docker/.env
@@ -33,3 +33,11 @@ AM_CERTS_INSTANCE_ID=
 AM_CERTS_CA_KEY=./ssl/ca.key
 AM_CERTS_CA_CERT=./ssl/ca.crt
 AM_CERTS_RELEASE_TAG=latest
+
+## Jaeger
+AM_JAEGER_PORT=6831
+AM_JAEGER_FRONTEND=16686
+AM_JAEGER_URL=http://jaeger:4318
+AM_JAEGER_TRACE_RATIO=1.0
+AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
+AM_JAEGER_OLTP_HTTP_PORT=4318
