--- a/docker/.env
+++ b/docker/.env
@@ -41,3 +41,5 @@ AM_JAEGER_URL=http://jaeger:4318
 AM_JAEGER_TRACE_RATIO=1.0
 AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
 AM_JAEGER_OLTP_HTTP_PORT=4318
+AM_JAEGER_MEMORY_MAX_TRACES=5000
+AM_JAEGER_TRACE_RATIO=1.0
