Generate root CA when service is intialized
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -1,3 +1,5 @@
+# Copyright (c) Abstract Machines
+# SPDX-License-Identifier: Apache-2.0
 # Docker: Environment variables in Compose
 
 ## CERTS
@@ -30,8 +32,6 @@ AM_CERTS_GRPC_CLIENT_KEY=
 AM_CERTS_GRPC_CLIENT_TLS=
 AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
-AM_CERTS_CA_KEY=./ssl/ca.key
-AM_CERTS_CA_CERT=./ssl/ca.crt
 AM_CERTS_RELEASE_TAG=latest
 
 ## Jaeger
