NOISSUE - Remove Magistrala dependencies
* First implementation

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Fix postgres and service test

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Fix tests and docker compose

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove debugging statements

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Handle error logs

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add license to each file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add jaeger

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add marshaljson error

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* grpc refactor

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove userId

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add more fields in certificate template

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add certs download encode response

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add mockery.yaml file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Generate root CA when service is intialized

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove mount volume

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove packages folder

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove web leftovers

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

---------

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -1,16 +1,19 @@
+# Copyright (c) Abstract Machines
+# SPDX-License-Identifier: Apache-2.0
 # Docker: Environment variables in Compose
 
 ## CERTS
 AM_CERTS_LOG_LEVEL=debug
 AM_CERTS_DB_HOST=certs-db
 AM_CERTS_DB_PORT=5432
-AM_CERTS_DB_USER=absamch
+AM_CERTS_DB_USER=absmach
 AM_CERTS_DB_PASS=absmach
 AM_CERTS_DB=certs
 AM_CERTS_DB_SSL_MODE=disable
 AM_CERTS_DB_SSL_CERT=
 AM_CERTS_DB_SSL_KEY=
 AM_CERTS_DB_SSL_ROOT_CERT=
+AM_CERTS_DB_MAX_CONNECTIONS=100
 AM_CERTS_HTTP_HOST=certs
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
@@ -29,5 +32,14 @@ AM_CERTS_GRPC_CLIENT_KEY=
 AM_CERTS_GRPC_CLIENT_TLS=
 AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
-AM_CERTS_CA_KEY=./ssl/ca.key
-AM_CERTS_CA_CERT=./ssl/ca.crt
+AM_CERTS_RELEASE_TAG=latest
+
+## Jaeger
+AM_JAEGER_PORT=6831
+AM_JAEGER_FRONTEND=16686
+AM_JAEGER_URL=http://jaeger:4318
+AM_JAEGER_TRACE_RATIO=1.0
+AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
+AM_JAEGER_OLTP_HTTP_PORT=4318
+AM_JAEGER_MEMORY_MAX_TRACES=5000
+AM_JAEGER_TRACE_RATIO=1.0
