--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,1 +1,65 @@
-# PLACEHOLDER
+# Copyright (c) Abstract Machines
+# SPDX-License-Identifier: Apache-2.0
+
+networks:
+  certs-base-net:
+    driver: bridge
+
+volumes:
+  certs-db-volume:
+
+services:
+  certs:
+    image: absmach/certs:${AM_CERTS_RELEASE_TAG}
+    container_name: certs
+    depends_on:
+      - certs-db
+    restart: on-failure
+    networks:
+      - certs-base-net
+    environment:
+      AM_CERTS_LOG_LEVEL: ${AM_CERTS_LOG_LEVEL}
+      AM_CERTS_DB_HOST: ${AM_CERTS_DB_HOST}
+      AM_CERTS_DB_PORT: ${AM_CERTS_DB_PORT}
+      AM_CERTS_DB_USER: ${AM_CERTS_DB_USER}
+      AM_CERTS_DB_PASS: ${AM_CERTS_DB_PASS}
+      AM_CERTS_DB: ${AM_CERTS_DB}
+      AM_CERTS_DB_SSL_MODE: ${AM_CERTS_DB_SSL_MODE}
+      AM_CERTS_HTTP_HOST: ${AM_CERTS_HTTP_HOST}
+      AM_CERTS_HTTP_PORT: ${AM_CERTS_HTTP_PORT}
+      AM_CERTS_GRPC_HOST: ${AM_CERTS_GRPC_HOST}
+      AM_CERTS_GRPC_PORT: ${AM_CERTS_GRPC_PORT}
+      AM_JAEGER_URL: ${AM_JAEGER_URL}
+      AM_JAEGER_TRACE_RATIO: ${AM_JAEGER_TRACE_RATIO}
+    ports:
+      - ${AM_CERTS_HTTP_PORT}:${AM_CERTS_HTTP_PORT}
+      - ${AM_CERTS_GRPC_PORT}:${AM_CERTS_GRPC_PORT}
+
+  certs-db:
+    image: postgres:16.2-alpine
+    container_name: certs-db
+    restart: on-failure
+    networks:
+      - certs-base-net
+    command: postgres -c "max_connections=${AM_CERTS_DB_MAX_CONNECTIONS}"
+    environment:
+      POSTGRES_USER: ${AM_CERTS_DB_USER}
+      POSTGRES_PASSWORD: ${AM_CERTS_DB_PASS}
+      POSTGRES_DB: ${AM_CERTS_DB}
+    ports:
+      - 5454:5432
+    volumes:
+      - certs-db-volume:/var/lib/postgresql/data
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.53.0
+    container_name: certs-jaeger
+    environment:
+      COLLECTOR_OTLP_ENABLED: ${AM_JAEGER_COLLECTOR_OTLP_ENABLED}
+    command: --memory.max-traces ${AM_JAEGER_MEMORY_MAX_TRACES}
+    restart: on-failure
+    networks:
+      - certs-base-net
+    ports:
+      - ${AM_JAEGER_FRONTEND}:${AM_JAEGER_FRONTEND}
+      - ${AM_JAEGER_OLTP_HTTP_PORT}:${AM_JAEGER_OLTP_HTTP_PORT}
