Refactor make file and docker file
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,24 +1,19 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 ARG SVC
-ARG GOARCH
-ARG GOARM
-ARG VERSION
-ARG COMMIT
-ARG TIME
 
-WORKDIR /app
+WORKDIR /go/src/github.com/absmach/certs
 
 COPY . .
 
 RUN apk update \
-    && apk add make \
+    && apk add make upx\
     && make $SVC \
+    && upx build/$SVC \
     && mv build/$SVC /exe
 
 FROM scratch
 
 # Required for billing service
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 COPY --from=builder /exe /
 ENTRYPOINT ["/exe"]
