Implement SDK and CLI (#9)
* Initial implementation of SDK

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add certs cli tool and tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Initial implementation of SDK tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add tests for SDK

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Refactor make file and docker file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove dockerfile comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Revert changes and remove service

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Remove go folder in sdk

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Add ghcr.io to make image public

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* Update image prefix

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update docker commands

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

---------

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 ARG SVC
 ARG GOARCH
@@ -7,13 +7,14 @@ ARG VERSION
 ARG COMMIT
 ARG TIME
 
-WORKDIR /app
+WORKDIR /go/src/github.com/absmach/certs
 
 COPY . .
 
 RUN apk update \
-    && apk add make \
+    && apk add make upx\
     && make $SVC \
+    && upx build/$SVC \
     && mv build/$SVC /exe
 
 FROM scratch
