--- a/mockery.yaml
+++ b/mockery.yaml
@@ -16,4 +16,9 @@ packages:
         config:
           dir: "{{.InterfaceDir}}/mocks"
           filename: "repository.go"
- 
+  github.com/absmach/certs/sdk:
+    interfaces:
+      SDK:
+        config:
+          dir: "{{.InterfaceDir}}/mocks"
+          filename: "sdk.go"
