--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,7 @@ jobs:
           args: --config ./.golangci.yml
 
       - name: Build all Binaries
-        run: |
-          make all -j $(nproc)
+        run: make all
 
   run-test:
     runs-on: ubuntu-latest
@@ -64,14 +63,6 @@ jobs:
           echo "The following files are not formatted:"
           echo "${{steps.prettier-run.outputs.prettier_output}}"
 
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.60
-
-      - name: Build
-        run: make all
-
       - name: Check for changes in services
         uses: dorny/paths-filter@v3
         id: filter
@@ -87,40 +78,35 @@ jobs:
               - "certs.pb.go"
               - "certs_grpc.pb.go"
               - "postgres/**"
-            
+
             cli:
               - "cmd/cli/**"
               - "sdk/**"
               - "cli/**"
 
       - name: Create coverage directory
-        run: |
-            mkdir coverage
+        run: mkdir coverage
 
       - name: Run certs tests
         if: steps.changes.outputs.certs == 'true' || steps.changes.outputs.workflow == 'true'
-        run: |
-            go test --race -v -count=1 -coverprofile=coverage/certs.out ./...
-    
+        run: go test --race -v -count=1 -coverprofile=coverage/certs.out ./...
+
       - name: Run cli tests
         if: steps.changes.outputs.cli == 'true' || steps.changes.outputs.workflow == 'true'
-        run: |
-            go test --race -v -count=1 -coverprofile=coverage/cli.out ./cli/...
+        run: go test --race -v -count=1 -coverprofile=coverage/cli.out ./cli/...
 
       - name: Run postgres tests
         if: steps.changes.outputs.postgres == 'true' || steps.changes.outputs.workflow == 'true'
-        run: |
-            go test --race -v -count=1 -coverprofile=coverage/postgres.out ./postgres/...
+        run: go test --race -v -count=1 -coverprofile=coverage/postgres.out ./postgres/...
 
       - name: Run sdk tests
         if: steps.changes.outputs.sdk == 'true' || steps.changes.outputs.workflow == 'true'
-        run: |
-            go test --race -v -count=1 -coverprofile=coverage/sdk.out ./sdk/...
+        run: go test --race -v -count=1 -coverprofile=coverage/sdk.out ./sdk/...
 
       - name: Upload coverage
         uses: codecov/codecov-action@v4
         with:
-            token: ${{ secrets.CODECOV }}
-            directory: ./coverage/
-            name: codecov-umbrella
-            verbose: true
+          token: ${{ secrets.CODECOV }}
+          directory: ./coverage/
+          name: codecov-umbrella
+          verbose: true
