fix build filters
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
           with:
             filters: |
                 certs:
-                    - "certs/**"
-                    - "cmd/certs/**"
+                    - "/**"
+                    - "cmd/**"
                     - "docker/Dockerfile"
 
                 dependencies:
