Load config file in main.go
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/config.yml
+++ b/docker/config.yml
@@ -8,7 +8,7 @@ ca:
   organizational_unit:
     - "AbstractMachines_ca"
   country:
-    - "Sirbea"
+    - "France"
   province:
     - "Sirbea"
   locality:
