--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.60.3
-          args: --config ./.golangci.yml
+          version: v2.1.6
+          args: --config ./.golangci.yaml
 
       - name: Build all Binaries
         run: make all
