--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,63 @@
 # Copyright (c) Abstract Machines
 # SPDX-License-Identifier: Apache-2.0
-
 name: Create and publish a Docker image
-
 on:
-    push:
-      branches: ["main"]
-
+  push:
+    branches: ["main"]
+    tags: ["v*"]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-
     permissions:
-        contents: read
-        packages: write
-
+      contents: read
+      packages: write
     steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
-    
-        - name: Check for changes in services
-          uses: dorny/paths-filter@v3
-          id: filter
-          with:
-            filters: |
-                certs:
-                    - "*/**"
-                    - "cmd/**"
-                    - "docker/Dockerfile"
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-                dependencies:
-                    - "go.mod"
-                    - "go.sum"
+      - name: Check for changes in services
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            certs:
+              - "*/**"
+              - "cmd/**"
+              - "docker/Dockerfile"
+            dependencies:
+              - "go.mod"
+              - "go.sum"
 
-        - name: Log in to the Container registry
-          uses: docker/login-action@v3
-          with:
-            registry: ${{ env.REGISTRY }}
-            username: ${{ github.actor }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-        - name: Build certs and push Docker image
-          uses: docker/build-push-action@v6
-          with:
-            context: .
-            file: ./docker/Dockerfile
-            push: true
-            build-args: |
-                SVC=certs
-            tags: ghcr.io/absmach/certs:latest
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          push: true
+          build-args: |
+            SVC=certs
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
