--- a/docker/.env
+++ b/docker/.env
@@ -26,22 +26,22 @@ AM_CERTS_RELEASE_TAG=latest
 
 ## OpenBao PKI
 AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
-AM_CERTS_OPENBAO_APP_ROLE=certs-role
-AM_CERTS_OPENBAO_APP_SECRET=certs-secret
+AM_CERTS_OPENBAO_APP_ROLE=absmach
+AM_CERTS_OPENBAO_APP_SECRET=absmach
 AM_CERTS_OPENBAO_NAMESPACE=
 AM_CERTS_OPENBAO_PKI_PATH=pki
-AM_CERTS_OPENBAO_ROLE=certs
+AM_CERTS_OPENBAO_ROLE=absmach
 
 ## OpenBao Server
-AM_OPENBAO_ROOT_TOKEN=myroot
-AM_OPENBAO_PKI_CA_CN=Abstract Machines CA
-AM_OPENBAO_PKI_CA_OU=IT Department
+AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
+AM_OPENBAO_PKI_CA_OU=Abstract Machines
 AM_OPENBAO_PKI_CA_O=Abstract Machines
-AM_OPENBAO_PKI_CA_C=US
-AM_OPENBAO_PKI_CA_L=San Francisco
-AM_OPENBAO_PKI_CA_ST=California
-AM_OPENBAO_PKI_CA_ADDR=
-AM_OPENBAO_PKI_CA_PO=
+AM_OPENBAO_PKI_CA_C=FRANCE
+AM_OPENBAO_PKI_CA_L=PARIS
+AM_OPENBAO_PKI_CA_ST=PARIS
+AM_OPENBAO_PKI_CA_ADDR=5 Av. Anatole
+AM_OPENBAO_PKI_CA_PO=75007
+AM_OPENBAO_PKI_ROLE_NAME=absmach
 
 ## Jaeger
 AM_JAEGER_PORT=6831
