--- a/.github/workflows/check-generated-files.yml
+++ b/.github/workflows/check-generated-files.yml
@@ -93,15 +93,9 @@ jobs:
       - name: Check Mocks are up to Date
         if: steps.changes.outputs.mocks == 'true'
         run: |
-          MOCKERY_VERSION=v3.50.3
-          STRINGER_VERSION=v0.19.0
-
-          go install github.com/vektra/mockery/v3@$MOCKERY_VERSION
-          go install golang.org/x/tools/cmd/stringer@$STRINGER_VERSION
-
-          mv ./sdk/mocks/sdk.go ./sdk/mocks/sdk.go.tmp
-          mv ./mocks/repository.go ./mocks/repository.go.tmp
-          mv ./mocks/service.go ./mocks/service.go.tmp
+          for f in $(find . -type f -path '*/mocks/*.go' ! -name 'doc.go'); do
+              mv $f $f.tmp
+          done
 
           make mocks
 
@@ -111,12 +105,12 @@ jobs:
             local entity_name=$2
 
             if ! cmp -s "$file_path" "$tmp_file_path"; then
-              echo "Error: Generated mocks for $entity_name are out of sync!"
-              echo "Please run 'make mocks' with mockery version $MOCKERY_VERSION and commit the changes."
-              exit 1
+                echo "Error: Generated mocks for $entity_name are out of sync!"
+                echo "Please run 'make mocks' with mockery version $MOCKERY_VERSION and commit the changes."
+                exit 1
             fi
           }
 
-          check_mock_changes ./sdk/mocks/sdk.go "SDK ./sdk/mocks/sdk.go"
-          check_mock_changes ./mocks/repository.go "Certs Repository ./mocks/repository.go"
-          check_mock_changes ./mocks/service.go "Certs Service ./mocks/service.go"
+          for f in $(find . -type f -path '*/mocks/*.go' ! -name 'doc.go'); do
+              check_mock_changes $f "$f"
+          done
