--- a/.github/workflows/check-generated-files.yml
+++ b/.github/workflows/check-generated-files.yml
@@ -16,13 +16,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Install Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23.x
+          go-version: 1.25.x
           cache-dependency-path: "go.sum"
+
+      - name: Set GOBIN
+        run: echo "GOBIN=$HOME/.local/bin" >> $GITHUB_ENV
+
+      - name: Add GOBIN to PATH
+        run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+
 
       - name: Check for changes in go.mod
         run: |
@@ -47,8 +54,8 @@ jobs:
       - name: Set up protoc
         if: steps.changes.outputs.proto == 'true'
         run: |
-          PROTOC_VERSION=29.0
-          PROTOC_GEN_VERSION=v1.36.5
+          PROTOC_VERSION=32.0
+          PROTOC_GEN_VERSION=v1.36.8
           PROTOC_GRPC_VERSION=v1.5.1
 
           # Download and install protoc
@@ -86,15 +93,9 @@ jobs:
       - name: Check Mocks are up to Date
         if: steps.changes.outputs.mocks == 'true'
         run: |
-          MOCKERY_VERSION=v2.53.3
-          STRINGER_VERSION=v0.19.0
-
-          go install github.com/vektra/mockery/v2@$MOCKERY_VERSION
-          go install golang.org/x/tools/cmd/stringer@$STRINGER_VERSION
-
-          mv ./sdk/mocks/sdk.go ./sdk/mocks/sdk.go.tmp
-          mv ./mocks/repository.go ./mocks/repository.go.tmp
-          mv ./mocks/service.go ./mocks/service.go.tmp
+          for f in $(find . -type f -path '*/mocks/*.go' ! -name 'doc.go'); do
+              mv $f $f.tmp
+          done
 
           make mocks
 
@@ -104,12 +105,12 @@ jobs:
             local entity_name=$2
 
             if ! cmp -s "$file_path" "$tmp_file_path"; then
-              echo "Error: Generated mocks for $entity_name are out of sync!"
-              echo "Please run 'make mocks' with mockery version $MOCKERY_VERSION and commit the changes."
-              exit 1
+                echo "Error: Generated mocks for $entity_name are out of sync!"
+                echo "Please run 'make mocks' with mockery version $MOCKERY_VERSION and commit the changes."
+                exit 1
             fi
           }
 
-          check_mock_changes ./sdk/mocks/sdk.go "SDK ./sdk/mocks/sdk.go"
-          check_mock_changes ./mocks/repository.go "Certs Repository ./mocks/repository.go"
-          check_mock_changes ./mocks/service.go "Certs Service ./mocks/service.go"
+          for f in $(find . -type f -path '*/mocks/*.go' ! -name 'doc.go'); do
+              check_mock_changes $f "$f"
+          done
