add prism certs
Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update'

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update sdk and tests

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update cli

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update certs client

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

rebase

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update certs

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update certs

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

update mocks

Signed-off-by: WashingtonKK <washingtonkigan@gmail.com>

--- a/mockery.yaml
+++ b/mockery.yaml
@@ -25,7 +25,7 @@ packages:
       CertsServiceClient:
         config:
           dir: "./mocks"
-          structname: "CertsServiceClient"
+          structname: "MockCertsServiceClient"
           filename: "certs_client.go"
   github.com/absmach/certs/sdk:
     interfaces:
