AMCERTS-148 - Replace PKI with Openbao (#142)
* intial implementation

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update env variables

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix entrypoint script

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix  CA url

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix openbao test and mockery

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix OCSP

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix go mod file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update check-generated

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update docker version

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update mocks

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix go mod file

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* address comments

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix failing linter

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* add response fields

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update ocsp method

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update sdk

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* update ocsp request

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix sdk tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

* fix cli tests

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

---------

Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,52 +6,65 @@ networks:
     driver: bridge
 
 volumes:
-  certs-db-volume:
+  openbao-data:
 
 services:
   certs:
     image: ghcr.io/absmach/certs:${AM_CERTS_RELEASE_TAG}
     container_name: certs
     depends_on:
-      - certs-db
+      - openbao
     restart: on-failure
     networks:
       - certs-base-net
     environment:
       AM_CERTS_LOG_LEVEL: ${AM_CERTS_LOG_LEVEL}
-      AM_CERTS_DB_HOST: ${AM_CERTS_DB_HOST}
-      AM_CERTS_DB_PORT: ${AM_CERTS_DB_PORT}
-      AM_CERTS_DB_USER: ${AM_CERTS_DB_USER}
-      AM_CERTS_DB_PASS: ${AM_CERTS_DB_PASS}
-      AM_CERTS_DB: ${AM_CERTS_DB}
-      AM_CERTS_DB_SSL_MODE: ${AM_CERTS_DB_SSL_MODE}
       AM_CERTS_HTTP_HOST: ${AM_CERTS_HTTP_HOST}
       AM_CERTS_HTTP_PORT: ${AM_CERTS_HTTP_PORT}
       AM_CERTS_GRPC_HOST: ${AM_CERTS_GRPC_HOST}
       AM_CERTS_GRPC_PORT: ${AM_CERTS_GRPC_PORT}
       AM_JAEGER_URL: ${AM_JAEGER_URL}
       AM_JAEGER_TRACE_RATIO: ${AM_JAEGER_TRACE_RATIO}
+      AM_CERTS_OPENBAO_HOST: ${AM_CERTS_OPENBAO_HOST}
+      AM_CERTS_OPENBAO_APP_ROLE: ${AM_CERTS_OPENBAO_APP_ROLE}
+      AM_CERTS_OPENBAO_APP_SECRET: ${AM_CERTS_OPENBAO_APP_SECRET}
+      AM_CERTS_OPENBAO_NAMESPACE: ${AM_CERTS_OPENBAO_NAMESPACE}
+      AM_CERTS_OPENBAO_PKI_PATH: ${AM_CERTS_OPENBAO_PKI_PATH}
+      AM_CERTS_OPENBAO_ROLE: ${AM_CERTS_OPENBAO_ROLE}
     ports:
       - ${AM_CERTS_HTTP_PORT}:${AM_CERTS_HTTP_PORT}
       - ${AM_CERTS_GRPC_PORT}:${AM_CERTS_GRPC_PORT}
-    volumes:
-     - ./config.yml:/config/config.yml
 
-  certs-db:
-    image: postgres:16.2-alpine
-    container_name: certs-db
+  openbao:
+    image: openbao/openbao:2.4.0
+    container_name: certs-openbao
     restart: on-failure
     networks:
       - certs-base-net
-    command: postgres -c "max_connections=${AM_CERTS_DB_MAX_CONNECTIONS}"
-    environment:
-      POSTGRES_USER: ${AM_CERTS_DB_USER}
-      POSTGRES_PASSWORD: ${AM_CERTS_DB_PASS}
-      POSTGRES_DB: ${AM_CERTS_DB}
     ports:
-      - 5454:5432
+      - 8200:8200
+    environment:
+      - BAO_ADDR=http://127.0.0.1:8200
+      - BAO_LOG_LEVEL=info
+      - SMQ_OPENBAO_PKI_ROLE=${AM_CERTS_OPENBAO_ROLE}
+      - SMQ_OPENBAO_APP_ROLE=${AM_CERTS_OPENBAO_APP_ROLE}
+      - SMQ_OPENBAO_APP_SECRET=${AM_CERTS_OPENBAO_APP_SECRET}
+      - SMQ_OPENBAO_NAMESPACE=${AM_CERTS_OPENBAO_NAMESPACE}
+      - SMQ_OPENBAO_PKI_CA_CN=${AM_OPENBAO_PKI_CA_CN}
+      - SMQ_OPENBAO_PKI_CA_OU=${AM_OPENBAO_PKI_CA_OU}
+      - SMQ_OPENBAO_PKI_CA_O=${AM_OPENBAO_PKI_CA_O}
+      - SMQ_OPENBAO_PKI_CA_C=${AM_OPENBAO_PKI_CA_C}
+      - SMQ_OPENBAO_PKI_CA_L=${AM_OPENBAO_PKI_CA_L}
+      - SMQ_OPENBAO_PKI_CA_ST=${AM_OPENBAO_PKI_CA_ST}
+    cap_add:
+      - IPC_LOCK
+    mem_swappiness: 0
     volumes:
-      - certs-db-volume:/var/lib/postgresql/data
+      - openbao-data:/opt/openbao/data
+      - openbao-data:/opt/openbao/config
+      - ./openbao-entrypoint.sh:/entrypoint.sh
+    entrypoint: /bin/sh
+    command: /entrypoint.sh
 
   jaeger:
     image: jaegertracing/all-in-one:1.53.0
