--- a/docker/.env
+++ b/docker/.env
@@ -4,16 +4,6 @@
 
 ## CERTS
 AM_CERTS_LOG_LEVEL=debug
-AM_CERTS_DB_HOST=certs-db
-AM_CERTS_DB_PORT=5432
-AM_CERTS_DB_USER=absmach
-AM_CERTS_DB_PASS=absmach
-AM_CERTS_DB=certs
-AM_CERTS_DB_SSL_MODE=disable
-AM_CERTS_DB_SSL_CERT=
-AM_CERTS_DB_SSL_KEY=
-AM_CERTS_DB_SSL_ROOT_CERT=
-AM_CERTS_DB_MAX_CONNECTIONS=100
 AM_CERTS_HTTP_HOST=certs
 AM_CERTS_HTTP_PORT=9010
 AM_CERTS_HTTP_SERVER_CERT=
@@ -33,6 +23,25 @@ AM_CERTS_GRPC_CLIENT_TLS=
 AM_CERTS_GRPC_CA_CERTS=
 AM_CERTS_INSTANCE_ID=
 AM_CERTS_RELEASE_TAG=latest
+
+## OpenBao PKI
+AM_CERTS_OPENBAO_HOST=http://certs-openbao:8200
+AM_CERTS_OPENBAO_APP_ROLE=absmach
+AM_CERTS_OPENBAO_APP_SECRET=absmach
+AM_CERTS_OPENBAO_NAMESPACE=
+AM_CERTS_OPENBAO_PKI_PATH=pki
+AM_CERTS_OPENBAO_ROLE=absmach
+
+## OpenBao Server
+AM_OPENBAO_PKI_CA_CN=Abstract Machines Root Certificate Authority
+AM_OPENBAO_PKI_CA_OU=Abstract Machines
+AM_OPENBAO_PKI_CA_O=Abstract Machines
+AM_OPENBAO_PKI_CA_C=FRANCE
+AM_OPENBAO_PKI_CA_L=PARIS
+AM_OPENBAO_PKI_CA_ST=PARIS
+AM_OPENBAO_PKI_CA_ADDR=5 Av. Anatole
+AM_OPENBAO_PKI_CA_PO=75007
+AM_OPENBAO_PKI_ROLE_NAME=absmach
 
 ## Jaeger
 AM_JAEGER_PORT=6831
