update docker compose
Signed-off-by: nyagamunene <stevenyaga2014@gmail.com>

--- a/docker/.env
+++ b/docker/.env
@@ -70,3 +70,11 @@ AM_JAEGER_COLLECTOR_OTLP_ENABLED=true
 AM_JAEGER_OLTP_HTTP_PORT=4318
 AM_JAEGER_MEMORY_MAX_TRACES=5000
 AM_JAEGER_TRACE_RATIO=1.0
+
+#### Auth Client Config
+SMQ_AUTH_URL=
+SMQ_AUTH_GRPC_URL=
+SMQ_AUTH_GRPC_TIMEOUT=
+SMQ_AUTH_GRPC_CLIENT_CERT=
+SMQ_AUTH_GRPC_CLIENT_KEY=
+SMQ_AUTH_GRPC_CLIENT_CA_CERTS=
