--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,11 @@ services:
       AM_CERTS_DB_PASS: ${AM_CERTS_DB_PASS}
       AM_CERTS_DB: ${AM_CERTS_DB}
       AM_CERTS_DB_SSL_MODE: ${AM_CERTS_DB_SSL_MODE}
+      AM_AUTH_GRPC_URL: ${SMQ_AUTH_GRPC_URL}
+      AM_AUTH_GRPC_TIMEOUT: ${SMQ_AUTH_GRPC_TIMEOUT}
+      AM_AUTH_GRPC_CLIENT_CERT: ${SMQ_AUTH_GRPC_CLIENT_CERT}
+      AM_AUTH_GRPC_CLIENT_KEY: ${SMQ_AUTH_GRPC_CLIENT_KEY}
+      AM_AUTH_GRPC_SERVER_CA_CERTS: ${SMQ_AUTH_GRPC_SERVER_CA_CERTS}
     ports:
       - ${AM_CERTS_HTTP_PORT}:${AM_CERTS_HTTP_PORT}
       - ${AM_CERTS_GRPC_PORT}:${AM_CERTS_GRPC_PORT}
